--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1,99 +1,113 @@
-.tittle-wrapper{
-    margin: 10px 0px 20px;
+.tittle-wrapper {
+  margin: 10px 0px 20px;
 }
-.formInputs{
-    width: 1200px;
-    background-color: #202020;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px 50px;
-    margin: 20px auto;
-    border-radius: 8px;
-    
+.formInputs {
+  width: 1100px;
+  background-color: #202020;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px 50px;
+  margin: 20px auto;
+  border-radius: 8px;
+  }
 
-}
-
-form{    
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: bottom;
+  gap: 20px;
+  justify-content: space-around;
+  input {
+    width: 100%;
+    margin: 5px 0px;
+    padding: 10px 0px;
+    border-radius: 10px;
+    background-color: #353535;
+    border: none;
+  }
+  label {
+    color: #888888;
+  }
+  .inputs-wrapper{
     display: flex;
-    flex-direction: row;
-    align-items: bottom;   
-    gap: 20px;     
-    justify-content: space-around;
-    input {
-        width: 100%;
-        margin: 5px 0px;
-        padding: 10px 0px;
-        border-radius: 10px;
-        background-color:#353535;
-        border: none;
-        
-        
-    }
-    label{
-        color: #888888 
-    }
+    gap: 30px;
 
-    button {
-        background-color: #36CE7C;
-        color: white;
-        padding: 00px 50px;        
-        border-radius: 10px;
-        font-weight: 800;
-        font-size: large;
-          
+    div{
+        width: 100%;
     }
-  
+  }
+
+  button {
+    width: 220px;
+    background-color: #36ce7c;
+    color: white;
+    padding: 10px 50px;
+    border-radius: 10px;
+    font-weight: 800;
+    font-size: large;
+    cursor: pointer;
+    border: none;
+  }
+  button:hover {
+    
+    background-color: #527462;
+    color: black;
+  }
 }
 .form-error {
-    background-color: red;       
+  background-color: #221515;
+  border: 1px solid #FF7070;
+
+  input{
+    background-color: #473434;
+  }
 }
 
 .cardColor {
-    width: calc(50% - 10px);
-    border-radius: 5px;
-    overflow: hidden;
-    transition: .1s ease-in-out;
-    border: 4px solid rgba(255, 255, 255, 0.1);
-    &:hover {
-        filter: brightness(150%);
-        cursor: pointer;
-    }
+  width: calc(50% - 10px);
+  min-width: 250px;
+  border-radius: 5px;
+  overflow: hidden;
+  transition: 0.1s ease-in-out;
+  border: 4px solid rgba(255, 255, 255, 0.1);
+  &:hover {
+    filter: brightness(150%);
+    cursor: pointer;
+  }
 
-    .cardShow {
-        padding: 50px 10px 10px;
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        color: white;
-        h2{
-            font-size: large;
-        }
-        h3{
-            margin-top: -10px;
-            font-size: xx-large;
-        }
+  .cardShow {
+    padding: 50px 10px 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    color: white;
+    h2 {
+      font-size: large;
     }
+    h3 {
+      margin-top: -10px;
+      font-size: xx-large;
+    }
+  }
 }
 .show {
-    max-width: 1200px;
-    height: auto;
-    
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding: 20px 50px;
-    margin: 20px auto;
-    border-radius: 10px;
-    
-    
-  }
-.cardsArea{
-        font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;    
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        gap: 20px;
+  max-width: 1200px;
+  height: auto;
+
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px 50px;
+  margin: 20px auto;
+  border-radius: 10px;
+}
+.cardsArea {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: 20px;
 }
