--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -37,6 +37,24 @@ form {
         width: 100%;
     }
   }
+  // #inputCor{
+  //   padding: 10px;
+  //   align-self: flex-end;
+  //   background-color: currentColor;
+    
+  //   input{
+  //     height: 60px;
+  //     border: 5px solid black;
+  //  }}
+    #inputCor {
+      width: 60%;
+      height: 35px;
+      padding: 0;
+      margin-left: 2%;   
+      cursor: pointer;
+}
+
+  
 
   button {
     width: 220px;
@@ -48,6 +66,8 @@ form {
     font-size: large;
     cursor: pointer;
     border: none;
+    align-self: flex-end;
+    
   }
   button:hover {
     
